--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+
+<html>
+<header>
+
 <meta http-equiv="refresh" content="0; url=https://repo.github.io/htmlcode/peurtheactualfleur/index.html">
+
+</header>
+  
+
+  
+</html>
