--- a/index.html
+++ b/index.html
@@ -80,15 +80,33 @@
 
     <div class="contentpane">
         <div class="narrowpane">
+            <div class="middlebox">
 
             <div class="picturebox">
-                <img src="html/media/peurlefleur-group-award.jpg" alt="v6x on the drumset" id="picturebox">
+                <img src="html/media/peurlefleur-group-award.jpg" alt="v6x on the drumset">
             </div>
+
 
             <div class="videobox">
-                <video src="html/media/peurlefleur-five-live.mp4" alt="peurlefleur-five-live"autoplay muted id="videobox">
+                <video src="html/media/peurlefleur-five-live.mp4" alt="peurlefleur-five-live"autoplay muted>
             </div>
 
+        
+            <div class="youtubebox">
+
+                <iframe 
+                width=640
+                height=400
+                src="https://www.youtube.com/embed/3r2btxopexM" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; 
+                clipboard-write; encrypted-media; gyroscope; 
+                picture-in-picture; web-share" 
+                allowfullscreen>
+            
+            </div>
+        </div>
 
         </div>
 
